RESOLVED FIXED105138
When the usergesture of mousedown is consumed, mouseup shouldn't have a user gesture indicator
https://bugs.webkit.org/show_bug.cgi?id=105138
Summary When the usergesture of mousedown is consumed, mouseup shouldn't have a user ...
jochen
Reported 2012-12-16 15:22:46 PST
just came across a pop-under which does the popup creation in mousedown and the hiding in mousedown. Can probably be fixed by using the same UserGestureIndicator::Token for related events
Attachments
Layout test (2.86 KB, patch)
2013-01-09 14:06 PST, jochen
no flags
Patch (7.50 KB, patch)
2013-01-11 00:21 PST, jochen
no flags
jochen
Comment 1 2013-01-09 14:06:36 PST
Created attachment 181979 [details] Layout test
jochen
Comment 2 2013-01-11 00:21:27 PST
Adam Barth
Comment 3 2013-01-11 01:45:15 PST
Comment on attachment 182278 [details] Patch Nice solution.
WebKit Review Bot
Comment 4 2013-01-11 02:09:13 PST
Comment on attachment 182278 [details] Patch Clearing flags on attachment: 182278 Committed r139419: <http://trac.webkit.org/changeset/139419>
WebKit Review Bot
Comment 5 2013-01-11 02:09:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.