Connect UserGestureIndicator for mousedown and mouseup events https://bugs.webkit.org/show_bug.cgi?id=105138

Reviewed by Adam Barth.

Source/WebCore:

Ports that consume user gestures to prevent certain types of pop-ups
need to be able to connect mousedown and mouseup events, otherwise, a
single mouse click will allow for opening multiple pop-ups.

Note that a mousedown is not always followed by a mouseup and vice
versa, e.g. when the mousedown results in a context menu being shown, or
something is dragged into the page.

Test: platform/chromium/fast/events/popup-allowed-from-gesture-only-once-two-events.html

* page/EventHandler.cpp:
(WebCore::EventHandler::clear):
(WebCore::EventHandler::handleMousePressEvent):
(WebCore::EventHandler::handleMouseReleaseEvent):
* page/EventHandler.h:

LayoutTests:

* platform/chromium/fast/events/popup-allowed-from-gesture-only-once-two-events-expected.txt: Added.
* platform/chromium/fast/events/popup-allowed-from-gesture-only-once-two-events.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@139419 bbb929c8-8fbe-4397-9dbb-9b2b20218538